# Spy

./: .clang-format  .clangd  .gitignore  CMakeArch.cmake  CMakeLists.txt  LICENSE  README.md  spy.cpp  spy_graph.dot  temp.cpp  test.cpp  xmake.lua
app/cli/: CMakeLists.txt
app/cli/include/: cli.h  cmdline.h
app/cli/src/: cli.cpp
app/temp/: CMakeLists.txt  temp.cpp
backend/: CMakeLists.txt  xmake.lua
backend/cuda/: CMakeLists.txt  xmake.lua
backend/cuda/backend/: abstract_backend.cu  cuda.cu
backend/cuda/include/: abstract_backend.h  cuda_backend.h  default_backend.h  gpu_device.h  gpu_mem.h  gpu_util.h  operator_impl.h  task.h
backend/cuda/operator/: mat.cu
backend/cuda/operator/detail/: binary_op.cu  convert.cu  matmul.cu
backend/distributor/: CMakeLists.txt
backend/distributor/include/: distributor.h
backend/distributor/include/distributor/: distributor.h  simple_distributor.h
backend/distributor/include/distributor/policy/: simple.h
backend/distributor/include/scheduler/: common.h  default_scheduler.h  scheduler.h
backend/distributor/include/scheduler/policy/: default.h
backend/distributor/src/: distributor.cpp  scheduler.cpp
backend/distributor/src/distributor/: distributor.cpp
backend/distributor/src/distributor/policy/: simple.cpp
backend/distributor/src/scheduler/: scheduler.cpp
backend/distributor/src/scheduler/policy/: default.cpp
backend/host/: CMakeLists.txt  xmake.lua
backend/host/backend/: abstract_backend.cpp  cpu_backend.cpp  host.cpp
backend/host/include/: abstract_backend.h  cpu_backend.h  default_backend.h  operator_impl.h  phase.h  task.h
backend/host/include/simd/: vec_binary.h  vec_convert.h  vec_dot.h  vec_unary.h  vec_util.h
backend/host/operator/: basic.cpp  mat.cpp  non-linear.cpp  quantize.cpp  view.cpp
backend/interface/: CMakeLists.txt  xmake.lua
backend/interface/include/backend/: allocator.h  backend.h  config.h  type.h
backend/interface/include/graph/: config.h  graph.h
backend/interface/include/number/: lookup_table.h  number.h  tensor.h
backend/interface/include/number/compute/: dot.h
backend/interface/include/number/number_impl/: common.h  imatrix.h  quant.h
backend/interface/include/number/quantization_impl/: type.h
backend/interface/include/operator/: basic.h  config.h
backend/interface/include/scheduler/: default.h  scheduler.h
backend/interface/src/scheduler/: default.cpp
benchmark/: CMakeLists.txt
benchmark/src/: temp.cpp
include/async/: and_then.h  concept.h  future.h  just.h  loop.h  task.h  when_all.h  when_any.h
include/async/async_impl/: basic_loop.h  ignore_return_promise.h  local_loop.h  previous_awaiter.h  return_previous.h  uring_loop.h
include/backend/: allocator.h  config.h  gpu.h  type.h
include/backend/cpu/: cpu.h  default.h  operator_impl.h  type.h
include/backend/gpu/: default.h  gpu.h  operator_impl.h  (+1 more)
include/graph/: config.h  graph.h  scheduler.h  type.h
include/model/: config.h  type.h
include/number/: number.h  quantization.h  tensor.h
include/operator/: basic.h  config.h  mat.h  non-linear.h  operator.h  quantize.h  type.h  view.h
include/terminal/: progress.h
include/util/: align.h  atomic.h  cmdline.h  exception.h  file.h  logger.h  simd.h  timer.h  unicode.h  unit.h
model/: CMakeLists.txt
model/include/: metadata.h
model/include/llm/: config.h  type.h
model/include/llm/file/: loader.h  mapper.h
model/include/llm/model/: abstract_model.h  config.h  llama.h  model.h  type.h
model/include/llm/model_impl/: abstract_model.h  config.h  llama.h  model.h
model/include/llm/plugin/: attention.h  ffn.h  graph_builder.h  inout.h
model/include/llm/sampler/: abstract_sample.h  config.h  greedy.h  sampler.h  type.h
model/include/llm/vocab/: abstract_vocab.h  byte_pair_encoding_vocab.h  config.h  sentence_piece_vocab.h  type.h  vocab.h  word_piece_vocab.h
model/src/llm/: model.cpp  sampler.cpp  vocab.cpp
model/src/llm/model/: llama.cpp
model/src/llm/plugin/: attention.cpp  ffn.cpp  inout.cpp
orchestration/: CMakeLists.txt  xmake.lua
perf/: CMakeLists.txt  xmake.lua
perf/include/perf/: csv.h  event.h  perf.h
perf/include/perf/listener/: abstract_listener.h  cpu.h  exception.h  listener.h  mem.h  timer.h
perf/include/perf/perfetto/: trace.h
perf/src/perf/: perf.cpp
perf/src/perf/listener/: cpu.cpp  mem.cpp
perf/src/perf/perfetto/: trace.cpp
src/backend/: cpu_linux.cpp  cpu_windows.cpp
src/cpu/: CMakeLists.txt  xmake.lua
src/cpu/backend/: abstract_backend.cpp
src/cpu/include/: abstract_backend.h  default_backend.h  operator_impl.h  phase.h  task.h
src/cpu/operator/: basic.cpp  mat.cpp  non-linear.cpp  quantize.cpp  view.cpp
src/gpu/: CMakeLists.txt  xmake.lua
src/gpu/backend/: abstract_backend.cu  gpu.cu
src/gpu/include/: abstract_backend.h  default_backend.h  gpu_device.h  gpu_mem.h  gpu_util.h  operator_impl.h  task.h
src/gpu/include/operator/detail/: binary_op.h  convert.h  matmul.h
src/gpu/operator/: basic.cu  mat.cu
src/gpu/operator/detail/: binary_op.cu  convert.cu  matmul.cu
storage/: CMakeLists.txt
storage/include/: mapper.h  model_loader.h
storage/include/adapter/: abstract_adapter.h  adapter.h  gguf_adaper.h  type.h
storage/include/file/: exception.h  file_handler.h  file_view.h  mapper.h
storage/include/loader/: loader.h  simple_loader.h
storage/include/loader/file/: exception.h  file_view.h  file_view_factory.h  mapper.h  view_map.h
storage/include/loader/policy/: simple.h
storage/src/adapter/: adapter.cpp  gguf_adapter.cpp
storage/src/loader/: loader.cpp
storage/src/loader/policy/: simple.cpp
test/: CMakeLists.txt
test/operator/: basic.cpp  mat.cpp  operator_test_suite.h
test/src/: temp.cpp
util/: CMakeLists.txt  xmake.lua
util/include/util/: align.h  exception.h  timer.h  unit.h
util/include/util/file/: file_handler.h  file_view.h
util/include/util/log/: logger.h
util/include/util/shell/: cmdline.h  logger.h
util/include/util/type/: printable.h
util/include/util/wrapper/: atomic.h  config_table.h
util/src/shell/: cmdline.cpp
(+81 files in other folders)
